add Keyboard Instruction

--- a/心动图标记中英文对照表 .md
+++ b/心动图标记中英文对照表 .md
@@ -2,8 +2,10 @@
 * 主动脉:Ao：Aorta
 * 左心房:LA：Left Atrium
 * 右心房:RA：Right Atrium
+* 房间隔:AS：Atrial Septum
 * 左心室:LV：Left Ventricle
 * 右心室:RV：Right Ventricle
+* 室间隔:VS：Ventricular Septum
 * 二尖瓣：MV:Mitral Valve
 * 二尖瓣前半尖:AML：Anterior Mitral Leaflet
 * 二尖瓣后半尖:PML：Posterior Mitral Leaflet
