make path relative

--- a/超声心动图分类.md
+++ b/超声心动图分类.md
@@ -6,14 +6,14 @@
 ## 主要切面实例
 
 1. 关于心脏与其长轴短轴与四腔心切面
-    ![image](https://user-images.githubusercontent.com/91119822/173788398-2907440e-af5a-41b8-82ab-ed9b6f7163b0.png)
+    ![image](./imgresource/173788398-2907440e-af5a-41b8-82ab-ed9b6f7163b0.png)
+    
       * 上图就是长轴切面
-  
-
-    ![image](https://user-images.githubusercontent.com/91119822/173786825-75f099ad-8887-462d-bbe6-3cc284e50a79.png)
-     * 长轴：矢状切面
-     * 短轴：冠状切面
-     * 四腔心：水平切面
+    
+        ![image](./imgresource/173786825-75f099ad-8887-462d-bbe6-3cc284e50a79.png)
+         * 长轴：矢状切面
+         * 短轴：冠状切面
+         * 四腔心：水平切面
 
 2. 主要长轴切面
    
@@ -23,66 +23,66 @@
 
         ![image](./imgresource/heartscan.gif)
 
-        ![image](https://user-images.githubusercontent.com/91119822/173991675-55588c75-c5c3-45da-acda-0fe892467ad6.png)
+        ![image](./imgresource/173991675-55588c75-c5c3-45da-acda-0fe892467ad6.png)
 
-        ![image](https://user-images.githubusercontent.com/91119822/173992308-b14e4e55-309a-4da6-a846-c1ebc897794c.png)
-
-
-        下面为标准的左室长轴切面(gif)，各个部位如图所示(前后联合部腱索与乳头肌较为明显)
-
-        ![image](./imgresource/LVLA.gif)
-
-    1. 左室短轴
-
-        在左室长轴切面的基础上把探头顺时针转 90 度就是左室短轴心底切面（也叫主动脉根部切面）。
-        ![image](https://user-images.githubusercontent.com/91119822/173992713-cd3c4f70-11b4-4bbf-ae49-29bd3e7cc190.png)
-
-        以探头倾斜的不同角度可以得到左室短轴的另外三个切面—————二尖瓣切面、腱索乳头肌切面和心尖切面。(与切萝卜类似，倾斜不同角度得到不同高度的切面)
-
-        ![image](https://user-images.githubusercontent.com/91119822/173992938-bee9bfd5-c9da-4ef4-9f4c-db6a9fc088d6.png)
         
-        由上至下重要切面依次为：
-
-        1. 主动脉根部短轴切面
    
-           ![image](https://user-images.githubusercontent.com/91119822/174546046-41112809-2b91-4aeb-ad6f-4ca67ed00bc9.png)
-
-        2. 二尖瓣口短轴切面
-
-            ![image](https://user-images.githubusercontent.com/91119822/174546131-724b9baf-af4b-40e5-a66c-e9f5423a3980.png)
-
-
-        3. 乳头肌短轴切面
-![image](https://user-images.githubusercontent.com/91119822/174546347-b413514d-7808-44a9-8963-619b4cf0f3d1.png)
-
-
-        4. 心尖部短轴切面(心尖部相较于乳头肌切面略小一些)
-   ![image](https://user-images.githubusercontent.com/91119822/174546498-1417ac4e-40fe-4c4b-a74f-34e68355e061.png)
-
-     3. 心尖部    
-    心尖的四腔切面是最重要的标准切面之一，这里可以评价心脏四个心腔大小，观察房间隔室间隔完整性，可以观察二尖瓣、三尖瓣运动情况。在心尖的四腔切面基础上探头逆时针转动 90 度就是心尖二腔切面，该切面主要观察左心室壁运动。在心尖的四腔切面基础上，探头角度稍稍上斜，可同时显示左室流出道和主动脉瓣，常称为心尖的五腔切面，其实并没有多出一个心腔，左室流出道和主动脉瓣属于左心腔一部分。
-
-        1. 心尖四腔切面
-        ![image](https://user-images.githubusercontent.com/91119822/174548568-748bae9d-d06b-4699-83e8-22b79bbff360.png)
-        ![image](./imgresource/FH.gif)
-
-        2. 心尖二腔切面
-        ![image](https://user-images.githubusercontent.com/91119822/174548969-e06b5532-49dd-4449-8f7e-31dbdfa0e8d3.png)
-        ![image](./imgresource/TWH.gif)
-
-        3.  心尖五腔切面
-        ![image](https://user-images.githubusercontent.com/91119822/174549732-df881563-43e2-47b4-8a57-0fa8a1937839.png)
-
-    4. 剑突下
+        ![image](./imgresource/173992308-b14e4e55-309a-4da6-a846-c1ebc897794c.png)
    
-        现在来到剑突下声窗，这个声窗很多切面和其它声窗是重复的，前面说过了虽然解剖形态相同但由于观察角度不一样，有辅助意义。
-
-        1. 剑突下四腔心
+        下面为标准的左室长轴切面(gif)，各个部位如图所示(前后联合部腱索与乳头肌较为明显)
    
-           剑突下声窗四腔切面作为心尖四腔切面的辅助观察区，其实它们切的是同一个平面，即它们所切的平面成像一模一样。
-           ![image](https://user-images.githubusercontent.com/91119822/174551930-4082b605-09b0-4847-94aa-3fb71911129e.png)
-
-
-
-
+        ![image](./imgresource/LVLA.gif)
    
+   2. 左室短轴
+   
+       在左室长轴切面的基础上把探头顺时针转 90 度就是左室短轴心底切面（也叫主动脉根部切面）。
+       ![image](./imgresource/173992713-cd3c4f70-11b4-4bbf-ae49-29bd3e7cc190.png)
+   
+       以探头倾斜的不同角度可以得到左室短轴的另外三个切面—————二尖瓣切面、腱索乳头肌切面和心尖切面。(与切萝卜类似，倾斜不同角度得到不同高度的切面)
+   
+       ![image](./imgresource/173992938-bee9bfd5-c9da-4ef4-9f4c-db6a9fc088d6.png)
+   
+       由上至下重要切面依次为：
+   
+       1. 主动脉根部短轴切面
+          
+          ![image](./imgresource/174546046-41112809-2b91-4aeb-ad6f-4ca67ed00bc9.png)
+   
+       2. 二尖瓣口短轴切面
+   
+           ![image](./imgresource/174546131-724b9baf-af4b-40e5-a66c-e9f5423a3980.png)
+   
+          3. 乳头肌短轴切面
+       
+             ​		![image](./imgresource/174546347-b413514d-7808-44a9-8963-619b4cf0f3d1.png)
+       
+          4. 心尖部短轴切面(心尖部相较于乳头肌切面略小一些)
+       
+                ![image](./imgresource/174546498-1417ac4e-40fe-4c4b-a74f-34e68355e061.png)
+
+3. 心尖部   
+
+  心尖的四腔切面是最重要的标准切面之一，这里可以评价心脏四个心腔大小，观察房间隔室间隔完整性，可以观察二尖瓣、三尖瓣运动情况。在心尖的四腔切面基础上探头逆时针转动 90 度就是心尖二腔切面，该切面主要观察左心室壁运动。在心尖的四腔切面基础上，探头角度稍稍上斜，可同时显示左室流出道和主动脉瓣，常称为心尖的五腔切面，其实并没有多出一个心腔，左室流出道和主动脉瓣属于左心腔一部分。
+
+   1. 心尖四腔切面
+      ![image](./imgresource/174548568-748bae9d-d06b-4699-83e8-22b79bbff360.png)
+      ![image](imgresource/FH.gif)
+
+   2. 心尖二腔切面
+      ![image](./imgresource/174548969-e06b5532-49dd-4449-8f7e-31dbdfa0e8d3.png)
+      ![image](imgresource/TWH.gif)
+
+   3.  心尖五腔切面
+      ![image](./imgresource/174549732-df881563-43e2-47b4-8a57-0fa8a1937839.png)
+
+4. 剑突下
+
+    现在来到剑突下声窗，这个声窗很多切面和其它声窗是重复的，前面说过了虽然解剖形态相同但由于观察角度不一样，有辅助意义。
+
+    1. 剑突下四腔心
+      
+       剑突下声窗四腔切面作为心尖四腔切面的辅助观察区，其实它们切的是同一个平面，即它们所切的平面成像一模一样。
+       ![image](./imgresource/174551930-4082b605-09b0-4847-94aa-3fb71911129e.png)
+
+
+
